# lang_adaptation_zipf_lep

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
src/lang_adaptation_zipf_lep/: compute_pareto.py  data_preparation.py  evolution_wrt_pareto.py  medical_idiom.py  zipfdistribution.py
